got rid of the loader for most of the website because it was causing issues with the intersection observer, also got rid of the suspense boundary around the search bar since it wasnt what was causing the issue, added some stylistic changes to the infinite loader component such as a min height and a bottom margin for some spacing between the blog articles and the footer

--- a/app/styles/article-card.scss
+++ b/app/styles/article-card.scss
@@ -11,6 +11,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 5rem;
+  min-height: 50dvh;
 
   .no-results-text {
     color: var(--light-text-color);
@@ -162,10 +164,6 @@
   min-height: 480px;
   border-radius: 1rem;
   border: 2px solid var(--border-color-1);
-}
-
-.loading-container {
-  margin-bottom: 5rem;
 }
 
 .skeleton-card {
